--- a/Todo/Views/TodoListPage.xaml
+++ b/Todo/Views/TodoListPage.xaml
@@ -18,12 +18,14 @@
     <ListView x:Name="listView" Margin="5" ItemSelected="OnListItemSelected">
         <ListView.ItemTemplate>
             <DataTemplate>
-                <ViewCell>
-                    <StackLayout Orientation="Vertical" VerticalOptions="FillAndExpand">
+                <ViewCell x:Name="TodoCell">
+                    <StackLayout Orientation="Vertical" VerticalOptions="FillAndExpand" x:Name="">
                         <StackLayout.BackgroundColor>
                             <Binding Path="Done">
                                 <Binding.Converter>
-                                    <converters:BoolBackgroundColorConverter TrueValue="#D3D3D3D3" FalseValue="#FFFFFF"></converters:BoolBackgroundColorConverter>
+                                    <converters:BoolBackgroundColorConverter TrueValue="#D3D3D3D3" FalseValue="#FFFFFF" DueDate="{Binding Path=BindingContext.DueDate, Source={x:Reference TodoCell}}">
+                                        
+                                    </converters:BoolBackgroundColorConverter>
                                 </Binding.Converter>
                             </Binding>
                         </StackLayout.BackgroundColor>
@@ -32,7 +34,7 @@
                             <Label Text="{Binding Name}" VerticalTextAlignment="Center" HorizontalOptions="StartAndExpand" />
                             <Image Source="check.png" HorizontalOptions="End" IsVisible="{Binding Done}" />
                         </StackLayout>
-                        <DatePicker Margin="0,-10,0,20" Date="{Binding Path=DueDate}" IsEnabled="False" VerticalOptions="End" FontSize="Micro" />
+                        <Label Margin="0,0,0,20" Text="{Binding Path=DueDate, StringFormat='{0:d}'}" IsEnabled="False" VerticalOptions="End" FontSize="Micro" />
                     </StackLayout>
                 </ViewCell>
             </DataTemplate>
